# oneAPI-samples

DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/niosv/: README.md
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/niosv/software/simple_dma_test/src/: simple_dma_test.c
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/max_reinvocation_delay/: README.md
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/max_reinvocation_delay/src/: max_reinvocation_delay.cpp  sequence_kernel_constrained.hpp  sequence_kernel_unconstrained.hpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/mem_channel/: README.md
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/mem_channel/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/: README.md
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/experimental/fpga template/: CMakeLists.txt
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/experimental/fpga template/src/: source2.cpp
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/experimental/fpga_template/: CMakeLists_Yohann.txt  CMakeListssrc.txt  Makefile  README.md  sample.json
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/experimental/fpga_template/src/: CMakeLists.txt  fpga_template.cpp  source2.cpp
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/fpga_template/: CMakeLists.txt  README.md  fpga_compile.sln  fpga_compile.vcxproj  sample.json
DirectProgramming/DPC++FPGA/Tutorials/GettingStarted/fpga_template/src/: CMakeLists.txt  fpga_compile.cpp  fpga_template.cpp
